# cust-order-service

./: Cargo.toml  Dockerfile  readme.md
.circleci/: config.yml
features/: create_order.feature
kube/: pod.yaml  service.yaml  service.yml
scripts/: ci-deploy.sh
src/: lib.rs  main.rs
src/api/: endpoints.rs  mod.rs  producers.rs  workers.rs
src/api/utils/: env.rs
src/models/: errors.rs  mod.rs  orders.rs  tables.rs
src/producers/: mod.rs  producer_connection.rs  producers.rs
src/repository/: hbase.rs  hbase_connection.rs  hbase_utils.rs  mod.rs
tests/: acceptance_tests.rs  acceptancetests.rs  integration_tests.rs
