[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = {version = "1.0.136", features = ["derive"]}
dotenv = "0.15.0"
futures = "0.3"
chrono = "0.4.23"
hbase-thrift = "1.0"
thrift = "0.15.0"
thrift-pool = { version = "1.4.1", default-features = false, optional = true }

sha2 = "0.10.6"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"