[package]
name = "order_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cucumber = "0.14.2"
testcontainers = "0.14.0"
tokio = { version = "1.22.0", features = [ "macros" ] }
mockall = "0.11.2"


[dependencies]
actix-web = "4.2.1"
serde = {version = "1.0.136", features = ["derive"]}
dotenv = "0.15.0"
futures = "0.3"
chrono = "0.4.23"
hbase-thrift = "1.0"
thrift = "0.15.0"
thrift-pool = { version = "1.4.1", default-features = false, optional = true }

sha2 = "0.10.6"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
kafka = "0.9.0"
serde_json = "1.0.64"

# [[test]]
# name = "acceptance_tests"
# harness = false  # allows Cucumber to print output instead of libtest